tests/invalid/undef_lambda_mode.err_exp
undef_lambda_mode.m:014: In mode declaration for lambda expression:
undef_lambda_mode.m:014:   error: undefined mode `junk'/0.
